--- a/notebooks/dev.ipynb
+++ b/notebooks/dev.ipynb
@@ -11,7 +11,10 @@
     "from vesper.processors.variants import *\n",
     "from vesper.processors.reads import *\n",
     "from vesper.processors.annotations import *\n",
-    "from vesper.models.variants import *\n"
+    "from vesper.models.variants import *\n",
+    "\n",
+    "import numpy as np\n",
+    "import time"
    ]
   },
   {
@@ -34,73 +37,10 @@
     "repeatmasker_path = Path(\"../annotations/hg38/GRCH38_repeatmasker.bed\")\n",
     "\n",
     "variants = []\n",
-    "# with ReadProcessor(bam_path) as read_proc:\n",
-    "#     with VCFProcessor(vcf_path, read_proc) as vcf_proc:\n",
-    "#         # TODO: uh, maybe lazy loading of reads + annotation, skip variants with excess support reads at locus... uhh... 250k reads is not normal\n",
-    "#         variants = list(vcf_proc.instantiate_variants(test_mode = False))\n",
     "with VCFProcessor(vcf_path) as vcf_proc:\n",
-    "    # TODO: uh, maybe lazy loading of reads + annotation, skip variants with excess support reads at locus... uhh... 250k reads is not normal\n",
     "    variants = list(vcf_proc.instantiate_variants(test_mode = False))\n",
     "\n",
-    "print(f\"Loaded {len(variants)} variants\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "Variant(contig=chr1, pos=1184927, type=INS, len=108, DR=29, DV=2),\n",
-       "confidence=0.0,\n",
-       "support_reads=0,\n",
-       "nonsupport_reads=0,\n",
-       "overlapping_features=0,\n",
-       "proximal_features=0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "variants[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with BEDProcessor(repeatmasker_path) as ann_proc:\n",
-    "    for variant in variants:\n",
-    "        if variant.variant.sv_type == SVType.INS:\n",
-    "            variant.add_annotations(ann_proc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# only run this if pulling reads from BAM with ReadProcessor\n",
-    "\n",
-    "reads_processed, max_reads_per_variant, max_reads_variant = 0, 0, None\n",
-    "for v in variants:\n",
-    "    reads_processed += len(v.support_reads) + len(v.nonsupport_reads)\n",
-    "    if len(v.support_reads) + len(v.nonsupport_reads) > max_reads_per_variant:\n",
-    "        max_reads_per_variant = len(v.support_reads) + len(v.nonsupport_reads)\n",
-    "        max_reads_variant = v\n",
-    "\n",
-    "print(f\"Processed {reads_processed} reads\")\n",
-    "print(f\"Max reads per variant: {max_reads_per_variant}\")\n",
-    "print(f\"Variant with max reads: {max_reads_variant}\") "
+    "print(f\"Loaded {len(variants)} variants\")"
    ]
   },
   {
@@ -112,38 +52,103 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed 3784 annotations\n",
-      "Max annotations per variant: 13\n",
-      "Variant with max annotations: \n",
-      "Variant(contig=chr11, pos=120328859, type=INS, len=188, DR=48, DV=1),\n",
-      "confidence=0.0,\n",
-      "support_reads=0,\n",
-      "nonsupport_reads=0,\n",
-      "overlapping_features=1,\n",
-      "proximal_features=12\n"
+      "Thread Pool with 16 workers: Annotated in 2.40 seconds\n",
+      "Thread Pool with 24 workers: Annotated in 2.27 seconds\n",
+      "Thread Pool with 32 workers: Annotated in 2.30 seconds\n"
      ]
     }
    ],
    "source": [
-    "annotations_processed, max_annotations_per_variant, max_annotations_variant = 0, 0, None\n",
-    "for v in variants:\n",
-    "    total_annotations = len(v.overlapping_features) + len(v.proximal_features)\n",
-    "    annotations_processed += total_annotations\n",
-    "    if total_annotations > max_annotations_per_variant:\n",
-    "        max_annotations_per_variant = total_annotations\n",
-    "        max_annotations_variant = v\n",
+    "# test varying the number of workers: processing time should decrease as # of workers increases\n",
     "\n",
-    "print(f\"Processed {annotations_processed} annotations\")\n",
-    "print(f\"Max annotations per variant: {max_annotations_per_variant}\")\n",
-    "print(f\"Variant with max annotations: {max_annotations_variant}\")"
+    "for n_workers in range(16, 33, 8):\n",
+    "    start_time = time.time()\n",
+    "    with BEDProcessor(repeatmasker_path) as ann_proc:\n",
+    "        ann_proc.annotate_variants(\n",
+    "            variants,\n",
+    "            proximal_span=500,\n",
+    "            n_workers=n_workers\n",
+    "        )\n",
+    "    end_time = time.time()\n",
+    "    print(f\"Thread Pool with {n_workers} workers: Annotated in {end_time - start_time:.2f} seconds\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "With 32 workers:\n",
+      "\n",
+      "Testing proximal span 100bp:\n",
+      "Mean annotations per variant: 22.3\n",
+      "Median annotations per variant: 16.0\n",
+      "Std dev annotations per variant: 19.0\n",
+      "Processing time: 2.33 seconds\n",
+      "\n",
+      "Testing proximal span 200bp:\n",
+      "Mean annotations per variant: 23.4\n",
+      "Median annotations per variant: 17.0\n",
+      "Std dev annotations per variant: 20.0\n",
+      "Processing time: 2.29 seconds\n",
+      "\n",
+      "Testing proximal span 300bp:\n",
+      "Mean annotations per variant: 24.9\n",
+      "Median annotations per variant: 18.0\n",
+      "Std dev annotations per variant: 21.2\n",
+      "Processing time: 2.33 seconds\n",
+      "\n",
+      "Testing proximal span 400bp:\n",
+      "Mean annotations per variant: 26.6\n",
+      "Median annotations per variant: 19.0\n",
+      "Std dev annotations per variant: 22.7\n",
+      "Processing time: 2.36 seconds\n",
+      "\n",
+      "Testing proximal span 500bp:\n",
+      "Mean annotations per variant: 28.6\n",
+      "Median annotations per variant: 20.0\n",
+      "Std dev annotations per variant: 24.3\n",
+      "Processing time: 2.28 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test varying the span of annotations: processing time should stay about the same\n",
+    "# while # of annotations per variant increases\n",
+    "\n",
+    "with BEDProcessor(repeatmasker_path) as ann_proc:\n",
+    "    n_workers = 32\n",
+    "    print(f\"\\nWith {n_workers} workers:\")\n",
+    "    for span in range(100, 501, 100):\n",
+    "        print(f\"\\nTesting proximal span {span}bp:\")\n",
+    "\n",
+    "        start_time = time.time()\n",
+    "        ann_proc.annotate_variants(\n",
+    "            variants,\n",
+    "            proximal_span=span,\n",
+    "            n_workers=n_workers\n",
+    "        )\n",
+    "        end_time = time.time()\n",
+    "        \n",
+    "        # Calculate annotation stats\n",
+    "        annotations_per_variant = [\n",
+    "            len(v.overlapping_features) + len(v.proximal_features) \n",
+    "            for v in variants\n",
+    "        ]\n",
+    "        mean_annotations = np.mean(annotations_per_variant)\n",
+    "        median_annotations = np.median(annotations_per_variant)\n",
+    "        std_annotations = np.std(annotations_per_variant)\n",
+    "        \n",
+    "        print(f\"Mean annotations per variant: {mean_annotations:.1f}\")\n",
+    "        print(f\"Median annotations per variant: {median_annotations:.1f}\")\n",
+    "        print(f\"Std dev annotations per variant: {std_annotations:.1f}\")\n",
+    "        print(f\"Processing time: {end_time - start_time:.2f} seconds\")"
+   ]
   }
  ],
  "metadata": {
