update requirements; remove extraneous tests

--- a/notebooks/dev.ipynb
+++ b/notebooks/dev.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from pathlib import Path\n",
     "import pysam\n",
-    "from vesper.processors.variants import *\n",
+    "from vesper.processors.vcf import *\n",
     "from vesper.processors.reads import *\n",
     "from vesper.processors.annotations import *\n",
     "from vesper.models.variants import *\n",
