update with iterated analysis test

--- a/notebooks/confidence.ipynb
+++ b/notebooks/confidence.ipynb
@@ -109,13 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load dev data\n",
     "\n",
-    "save_data = False\n",
+    "save_data = True\n",
     "\n",
     "all_variants = load_test_dataset(Path(\"/Users/stacy/sudmant/vesper/notebooks/files/all_variants.pkl\"))\n",
     "alu_contexts_df = pd.read_csv(f\"{supp_table_dir}/alu_features.csv\")\n",
@@ -147,7 +147,7 @@
     "        'query_end': rm_result.query_end,\n",
     "        'repeat_start': rm_result.repeat_start,\n",
     "        'repeat_end': rm_result.repeat_end,\n",
-    "        'repeat_remaining': rm_result.repeat_left\n",
+    "        'repeat_left': rm_result.repeat_left\n",
     "    }\n",
     "\n",
     "def create_alu_context_entry(breakpoint, alu_info):\n",
@@ -180,7 +180,8 @@
     "        'ins_match_length': query_end - query_start,\n",
     "        'ins_repeat_start': alu_info['repeat_start'],\n",
     "        'ins_repeat_end': alu_info['repeat_end'],\n",
-    "        'ins_repeat_remaining': alu_info['repeat_remaining'],\n",
+    "        'ins_repeat_left': alu_info['repeat_left'],\n",
+    "        'ins_repeat_length': alu_info['repeat_end'] - alu_info['repeat_start'],\n",
     "        'ins_start_in_read': breakpoint.read_ins_coords[0],\n",
     "        'ins_end_in_read': breakpoint.read_ins_coords[1]\n",
     "    }\n",
@@ -198,6 +199,9 @@
     "        context_entry['variant_id'] = variant.variant.ID\n",
     "        context_entry['variant_chrom'] = variant.variant.chrom\n",
     "        context_entry['variant_position'] = variant.variant.position\n",
+    "        context_entry['variant_confidence'] = variant.confidence\n",
+    "        context_entry['variant_filter'] = variant.variant.filter\n",
+    "        context_entry['n_support'] = len(variant.support_reads.reads)\n",
     "        alu_contexts.append(context_entry)\n",
     "\n",
     "        for read in breakpoint.support_reads.reads:\n",
@@ -209,23 +213,54 @@
     "            alu_reads.append(read_entry)\n",
     "\n",
     "alu_features_df = pd.DataFrame(alu_contexts)\n",
+    "variant_ids_to_sample = pd.read_csv(f\"{supp_table_dir}/variant_ids_to_sample.csv\")\n",
+    "\n",
+    "# Create a custom sorting order for chromosomes\n",
+    "chrom_order = [f\"chr{n}\" for n in range(1,23)] + [\"chrX\", \"chrY\"]\n",
+    "chrom_order_dict = {chrom: i for i, chrom in enumerate(chrom_order)}\n",
+    "\n",
+    "alu_features_df = alu_features_df.sort_values(\n",
+    "    by=['variant_chrom', 'variant_position'],\n",
+    "    key=lambda x: x.map(chrom_order_dict) if x.name == 'variant_chrom' else x\n",
+    ")\n",
+    "\n",
+    "# Map sample names from variant IDs\n",
+    "alu_features_df = pd.merge(alu_features_df, variant_ids_to_sample, on='variant_id', how='left')\n",
+    "alu_features_df = alu_features_df[['sample', 'variant_id', 'variant_chrom', 'variant_position', 'variant_confidence', 'variant_filter',\n",
+    "                                    'n_support','ins_name', 'original_strand', 'ins_seq',\n",
+    "                                    'ins_seq_length', 'ins_query_start', 'ins_query_end', 'ins_pre_query',\n",
+    "                                    'ins_match_seq', 'ins_match_length', 'ins_repeat_start',\n",
+    "                                    'ins_repeat_end', 'ins_repeat_left', 'ins_repeat_length', \n",
+    "                                    'ins_start_in_read', 'ins_end_in_read',\n",
+    "                                    'poly_a_tail_seq', 'poly_a_tail_start',\n",
+    "                                    'poly_a_tail_end', 'poly_a_tail_length', 'poly_a_tail_impurity',\n",
+    "                                    'left_tsd_seq', 'right_tsd_seq', 'tsd_length', 'left_tsd_start',\n",
+    "                                    'left_tsd_end', 'right_tsd_start', 'right_tsd_end']]\n",
+    "alu_features_df.to_csv(f\"{supp_table_dir}/raw_alu_features.csv\", index = False)\n",
+    "\n",
     "alu_reads_df = pd.DataFrame(alu_reads)\n",
+    "alu_features_df = alu_features_df.query(\"variant_filter != 'NO_PRIMARY_SUPPORT'\")\n",
     "alu_features_df = pd.merge(alu_features_df, alu_reads_df, on = 'variant_id')\n",
     "\n",
     "if save_data:\n",
-    "    export_df = alu_features_df[['variant_id', 'variant_chrom', 'variant_position', 'ins_name', \n",
+    "    export_df = alu_features_df[['sample','variant_id', 'variant_chrom', 'variant_position', 'variant_filter', 'variant_confidence','ins_name', \n",
     "                             'original_strand', 'ins_start_in_read', 'ins_end_in_read', \n",
-    "                             'ins_seq_length', 'ins_seq','ins_query_start', 'ins_query_end', 'ins_match_length',\n",
+    "                             'ins_seq_length', 'ins_seq', 'ins_repeat_start', 'ins_repeat_end', 'ins_repeat_left', 'ins_repeat_length', \n",
+    "                             'ins_query_start', 'ins_query_end', 'ins_match_length',\n",
     "                             'left_tsd_seq', 'tsd_length','left_tsd_start', 'left_tsd_end', \n",
     "                             'right_tsd_start', 'right_tsd_end', 'poly_a_tail_seq', \n",
     "                             'poly_a_tail_length', 'poly_a_tail_impurity', 'poly_a_tail_start', 'poly_a_tail_end']]\n",
     "    export_df.to_csv(f\"{supp_table_dir}/alu_features.csv\", index = False)\n",
-    "    alu_reads_df.to_csv(f\"{supp_table_dir}/alu_support_reads.csv\", index = False)"
+    "    alu_reads_df.to_csv(f\"{supp_table_dir}/alu_support_reads.csv\", index = False)\n",
+    "\n",
+    "    with open(\"/Users/stacy/sudmant/manuscript/chapter_3/supp_files/alu_support_reads.fasta\", \"w\") as f:\n",
+    "        for _, row in alu_reads_df.iterrows():\n",
+    "            f.write(f\">{row['variant_id']}\\n{row['read_sequence']}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,6 +426,17 @@
     "context_analysis['variant_position'] = context_analysis['variant_position'].astype(int)\n",
     "context_analysis['tsd_length'] = context_analysis['tsd_length'].astype(int)\n",
     "context_analysis.to_csv(f\"{supp_table_dir}/alu_context_analysis.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"/Users/stacy/sudmant/manuscript/chapter_3/supp_files/alu_support_reads.fasta\", \"w\") as f:\n",
+    "    for _, row in alu_reads_df.iterrows():\n",
+    "        f.write(f\">{row['variant_id']}\\n{row['read_sequence']}\\n\")"
    ]
   },
   {
