rm old test mode, fix context tests

--- a/notebooks/alu_breakpoint_analysis.ipynb
+++ b/notebooks/alu_breakpoint_analysis.ipynb
@@ -136,7 +136,7 @@
     "    vcf_path = sample_cfg[\"vcf\"]\n",
     "    bam_path = sample_cfg[\"bam\"]\n",
     "\n",
-    "    variants = load_variants(vcf_path, test_mode=TEST_MODE)\n",
+    "    variants = load_variants(vcf_path)\n",
     "\n",
     "    with ReadProcessor(bam_path) as read_proc:\n",
     "        for analysis in variants:\n",
